--- a/app/globals.css
+++ b/app/globals.css
@@ -44,3 +44,37 @@ input[type="number"]::-webkit-outer-spin-button {
   appearance: none;
 }
 
+
+
+
+/* Style scrollbar for Firefox */
+body {
+  scrollbar-width: thin;
+  scrollbar-color: #cccccc #f0f0f0;
+}
+
+/* Style scrollbar for Webkit/Blink based browsers */
+body::-webkit-scrollbar {
+  width: 12px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #cccccc; /* Thumb color */
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #f0f0f0; /* Track color */
+}
+
+
+
+/* Hide scrollbar for all browsers */
+.overflow-y-scroll {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer and Edge */
+}
+
+/* Hide scrollbar for Webkit/Blink based browsers */
+.overflow-y-scroll::-webkit-scrollbar {
+  display: none;
+}
